<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
 
    <TextView android:id="@+id/configtxtMensaje"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mensaje_config" />
 
    <EditText android:id="@+id/configMensaje"
              android:layout_height="wrap_content"
              android:layout_width="match_parent" />
 
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
 
        <Button android:id="@+id/configBtnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aceptar" />
 
        <Button android:id="@+id/configBtnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />
 
    </LinearLayout>
 
</LinearLayout>