<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="513dp"
	    android:orientation="vertical" >

	    <Button
	        android:id="@+id/butPagar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="16dp"
	        android:text="@string/Pagar" />

	    <TextView
	        android:id="@+id/txtLocalidad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/textLocalidad"
	        android:layout_alignRight="@+id/txtCalle"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textPrecio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textLocalidad"
	        android:layout_below="@+id/textLocalidad"
	        android:layout_marginTop="50dp"
	        android:text="@string/Precio" />

	    <TextView
	        android:id="@+id/txtPrecio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textPrecio"
	        android:layout_alignBottom="@+id/textPrecio"
	        android:layout_alignLeft="@+id/txtLocalidad"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textLocalidad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textCalle"
	        android:layout_below="@+id/textCalle"
	        android:layout_marginTop="50dp"
	        android:text="@string/Localidad" />

	    <TextView
	        android:id="@+id/txtNombree"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/textNombre"
	        android:layout_toRightOf="@+id/butDistancia"
	        android:text="TextView" />

	    <Button
	        android:id="@+id/butDistancia"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="14dp"
	        android:layout_marginRight="26dp"
	        android:layout_toLeftOf="@+id/txtPrecio"
	        android:text="@string/Distancia" />

	    <TextView
	        android:id="@+id/txtCalle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/textLocalidad"
	        android:layout_toLeftOf="@+id/butPagar"
	        android:text="TextView" />

	    <TextView
	        android:id="@+id/textNombre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/txtCalle"
	        android:layout_alignParentLeft="true"
	        android:layout_marginBottom="42dp"
	        android:layout_marginLeft="14dp"
	        android:text="@string/Nombre" />

	    <TextView
	        android:id="@+id/textCalle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textNombre"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="102dp"
	        android:text="@string/Calle" />

	    <TextView
	        android:id="@+id/textInstalaciones"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textPrecio"
	        android:layout_below="@+id/textPrecio"
	        android:layout_marginTop="54dp"
	        android:text="@string/Instalaciones" />

	    <TextView
	        android:id="@+id/txtInstalaciones"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textInstalaciones"
	        android:layout_alignBottom="@+id/textInstalaciones"
	        android:layout_toRightOf="@+id/butDistancia"
	        android:text="TextView" />

	</RelativeLayout>

</ScrollView>