<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	
	    <Button
	        android:id="@+id/butPosicion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editLongitud"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="44dp"
	        android:text= "@string/MiPosicion"/>
	
	    <TextView
	        android:id="@+id/textLatitud"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="20dp"
	        android:layout_toLeftOf="@+id/butPosicion"
	        android:text="@string/Latitud" />
	
	    <EditText
	        android:id="@+id/editLatitud"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textLatitud"
	        android:layout_below="@+id/textLatitud"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	
	    <TextView
	        android:id="@+id/textLongitud"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editLatitud"
	        android:layout_below="@+id/editLatitud"
	        android:layout_marginTop="24dp"
	        android:text="@string/Longitud" />
	
	    <EditText
	        android:id="@+id/editLongitud"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textLongitud"
	        android:layout_below="@+id/textLongitud"
	        android:ems="10" />
	
	    <Button
	        android:id="@+id/butCalcular"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/butPosicion"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="32dp"
	        android:text="@string/Calcular" />
	
	    <TextView
	        android:id="@+id/textDistancia"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/butCalcular"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="38dp" />
	
	</RelativeLayout>
</ScrollView>