<ScrollView 
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	   	android:layout_width="match_parent"
	    android:layout_height="match_parent">	
	    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="476dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".BusquedaActivity" >
	
	    <EditText
	        android:id="@+id/edDeporteBuscar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/button2"
	        android:layout_below="@+id/QueBuscas"
	        android:layout_marginTop="40dp"
	        android:ems="10" />

	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/buttonBuscar"
	        android:layout_below="@+id/edLocalidad"
	        android:layout_marginRight="46dp"
	        android:layout_marginTop="46dp"
	        android:text="Rellenar" />

	    <TextView
	        android:id="@+id/txtPerfNombre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/QueBuscas"
	        android:layout_marginTop="17dp"
	        android:layout_toLeftOf="@+id/buttonBuscar"
	        android:text="@string/Deporte" />

	    <TextView
	        android:id="@+id/textLocalidad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edDeporteBuscar"
	        android:layout_marginTop="39dp"
	        android:layout_toLeftOf="@+id/buttonBuscar"
	        android:text="@string/Localidad" />

	    <EditText
	        android:id="@+id/edLocalidad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textLocalidad"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="36dp"
	        android:ems="10" />

	    <TextView
	        android:id="@+id/QueBuscas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/edLocalidad"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="16dp"
	        android:layout_marginTop="38dp"
	        android:text="@string/QueBuscas"
	        android:textSize="@dimen/newDimension" />

	    <Button
	        android:id="@+id/buttonBuscar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/QueBuscas"
	        android:layout_below="@+id/button2"
	        android:layout_marginTop="29dp"
	        android:text="@string/Buscar" />
	
	</RelativeLayout>
</ScrollView>	